--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -31,6 +31,7 @@ jobs:
          - e2e-pdb
          - e2e-prometheuscr
          - e2e-targetallocator
+         - e2e-targetallocator-cr
          - e2e-upgrade
          - e2e-multi-instrumentation
          - e2e-metadata-filters
@@ -50,6 +51,8 @@ jobs:
            setup: "add-operator-arg OPERATOR_ARG='--feature-gates=operator.sidecarcontainers.native' prepare-e2e"
            kube-version: "1.29"
          - group: e2e-targetallocator
+           setup: "enable-targetallocator-cr prepare-e2e"
+         - group: e2e-targetallocator-cr
            setup: "enable-targetallocator-cr prepare-e2e"
     steps:
     - name: Check out code into the Go module directory
