--- a/bundle/community/manifests/opentelemetry.io_targetallocators.yaml
+++ b/bundle/community/manifests/opentelemetry.io_targetallocators.yaml
@@ -1,9 +1,12 @@
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
+    cert-manager.io/inject-ca-from: opentelemetry-operator-system/opentelemetry-operator-serving-cert
     controller-gen.kubebuilder.io/version: v0.17.1
+  creationTimestamp: null
+  labels:
+    app.kubernetes.io/name: opentelemetry-operator
   name: targetallocators.opentelemetry.io
 spec:
   group: opentelemetry.io
@@ -3391,3 +3394,9 @@ spec:
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: null
+  storedVersions: null
