--- a/.github/workflows/publish-test-e2e-images.yaml
+++ b/.github/workflows/publish-test-e2e-images.yaml
@@ -53,6 +53,11 @@ jobs:
     with:
       path: nodejs
       platforms: linux/arm64,linux/amd64,linux/s390x,linux/ppc64le
+  php:
+    uses: ./.github/workflows/reusable-publish-test-e2e-images.yaml
+    with:
+      path: php
+      platforms: linux/arm64,linux/amd64
   metrics-basic-auth:
     uses: ./.github/workflows/reusable-publish-test-e2e-images.yaml
     with:
