Use 0.0.0.0 as otlp receiver default address (#3325)
* operator: expose receivers by default

Signed-off-by: Benedikt Bongartz <bongartz@klimlive.de>

* singleEndpointConfig: use omitempty

Signed-off-by: Benedikt Bongartz <bongartz@klimlive.de>

* components: apply MultiAddressDefaulter

Signed-off-by: Benedikt Bongartz <bongartz@klimlive.de>

* simplify some logic, add tests

* config merge: handle nil values

Signed-off-by: Benedikt Bongartz <bongartz@klimlive.de>

---------

Signed-off-by: Benedikt Bongartz <bongartz@klimlive.de>
Co-authored-by: Jacob Aronoff <jacobaronoff45@gmail.com>

--- a/tests/e2e-multi-instrumentation/instrumentation-multi-multicontainer-go/02-assert.yaml
+++ b/tests/e2e-multi-instrumentation/instrumentation-multi-multicontainer-go/02-assert.yaml
@@ -84,8 +84,10 @@ spec:
         receivers:
           otlp:
             protocols:
-              grpc: null
-              http: null
+              grpc:
+                endpoint: 0.0.0.0:4317
+              http:
+                endpoint: 0.0.0.0:4318
         exporters:
           debug: null
         service:
