meta: update changelog

--- a/.chloggen/3267-custom-instr-vol.yaml
+++ b/.chloggen/3267-custom-instr-vol.yaml
@@ -5,7 +5,7 @@ change_type: enhancement
 component: auto-instrumentation
 
 # A brief description of the change. Surround your text with quotes ("") if it needs to start with a backtick (`).
-note: Adds Volume field to Instrumentation spec to enable user-definable volumes for auto-instrumentation.
+note: Adds VolumeClaimTemplate field to Instrumentation spec to enable user-definable ephemeral volumes for auto-instrumentation.
 
 # One or more tracking issues related to the change
 issues: [3267]
