--- a/.chloggen/remove_localhost_fg.yaml
+++ b/.chloggen/remove_localhost_fg.yaml
@@ -1,11 +1,11 @@
 # One of 'breaking', 'deprecation', 'new_component', 'enhancement', 'bug_fix'
-change_type: bug_fix
+change_type: breaking
 
 # The name of the component, or a single word describing the area of concern, (e.g. collector, target allocator, auto-instrumentation, opamp, github action)
-component: operator
+component: collector
 
 # A brief description of the change. Surround your text with quotes ("") if it needs to start with a backtick (`).
-note: Remove ComponentUseLocalHostAsDefaultHost feature gate.
+note: Remove ComponentUseLocalHostAsDefaultHost collector feature gate.
 
 # One or more tracking issues related to the change
 issues: [3306]
@@ -16,3 +16,21 @@ issues: [3306]
 subtext: |
   This change may break setups where receiver endpoints are not explicitly configured to listen on e.g. 0.0.0.0.
   Change \#3333 attempts to address this issue for a known set of components.
+  The operator performs the adjustment for the following receivers:
+  - otlp/gRPC, otlp/HTTP
+  - skywalking/gRPC, skywalking/HTTP
+  - jaeger/gRPC, jaeger/thrift_http, jaeger/thrift_compact, jaeger/thrift_binary
+  - lok/gRPC, loki/HTTP
+  - opencensus
+  - zipkin
+  - tcplog
+  - udplog
+  - fluentforward
+  - statsd
+  - awsxray/UDP
+  - carbon
+  - collectd
+  - sapm
+  - signalfx
+  - splunk_hec
+  - wavefront
