switch to featuregate

--- a/.chloggen/add_all_receiver_defaults.yaml
+++ b/.chloggen/add_all_receiver_defaults.yaml
@@ -13,4 +13,6 @@ issues: [3126]
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
 # Use pipe (|) for multiline entries.
-subtext:
+subtext: |
+  This feature is enabled by default. It can be disabled by specifying
+  `--feature-gates=-operator.collector.default.config`.
