--- a/tests/e2e/annotation-change-collector/02-assert-statefulset-without-extra-annotation.yaml
+++ b/tests/e2e/annotation-change-collector/02-assert-statefulset-without-extra-annotation.yaml
@@ -2,8 +2,14 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: statefulset-collector
+  (contains(keys(annotations), 'user-annotation')): true
+  (contains(keys(annotations), 'new-annotation')): true
+  annotations:
+    manual-annotation: "true"
 spec:
   template:
     metadata:
-      (contains(keys(annotations), 'user-annotation')): false
-      (contains(keys(annotations), 'new-annotation')): false
+      (contains(keys(annotations), 'user-annotation')): true
+      (contains(keys(annotations), 'new-annotation')): true
+      annotations:
+        manual-annotation: "true"
