Add support for persistentVolumeClaimRetentionPolicy field

--- a/tests/e2e/statefulset-features/00-assert.yaml
+++ b/tests/e2e/statefulset-features/00-assert.yaml
@@ -4,6 +4,9 @@ metadata:
   name: stateful-collector
 spec:
   podManagementPolicy: Parallel
+  persistentVolumeClaimRetentionPolicy:
+    whenDeleted: "Retain"
+    whenScaled: "Delete"
   template:
     spec:
        containers:
