--- a/tests/e2e/statefulset-features/00-install.yaml
+++ b/tests/e2e/statefulset-features/00-install.yaml
@@ -18,6 +18,9 @@ spec:
       resources:
         requests:
           storage: 1Gi
+  persistentVolumeClaimRetentionPolicy:
+    whenDeleted: "Retain"
+    whenScaled: "Delete"
   config: |
     receivers:
       jaeger:
