Removed unnecessary PersistentVolumeClaimRetentionPolicy function

--- a/tests/e2e/persistentVolumeClaimRetentionPolicy-collector/00-install.yaml
+++ b/tests/e2e/persistentVolumeClaimRetentionPolicy-collector/00-install.yaml
@@ -13,7 +13,7 @@ spec:
       jaeger:
         protocols:
           grpc: {}
-    processors:
+    processors: {}
     exporters:
       debug: {}
     service:
