--- a/tests/e2e-native-sidecar/00-assert.yaml
+++ b/tests/e2e-native-sidecar/00-assert.yaml
@@ -10,6 +10,7 @@ spec:
   - name: myapp
   initContainers:
   - name: otc-container
+    restartPolicy: Always
 status:
   containerStatuses:
   - name: myapp
