--- a/tests/e2e-instrumentation/instrumentation-nodejs-volume/01-assert.yaml
+++ b/tests/e2e-instrumentation/instrumentation-nodejs-volume/01-assert.yaml
@@ -59,12 +59,13 @@ spec:
         - mountPath: /otel-auto-instrumentation-nodejs
           name: opentelemetry-auto-instrumentation-nodejs
     - args:
-        - --feature-gates=-component.UseLocalHostAsDefaultHost
         - --config=env:OTEL_CONFIG
       name: otc-container
   initContainers:
     - name: opentelemetry-auto-instrumentation-nodejs
   volumes:
+    - projected:
+        defaultMode: 420
     - name: opentelemetry-auto-instrumentation-nodejs
       ephemeral:
         volumeClaimTemplate:
