--- a/tests/e2e-multi-instrumentation/instrumentation-multi-multicontainer/01-assert.yaml
+++ b/tests/e2e-multi-instrumentation/instrumentation-multi-multicontainer/01-assert.yaml
@@ -331,6 +331,9 @@ spec:
         exporters:
           debug: null
         service:
+          telemetry:
+            metrics:
+              address: 0.0.0.0:8888
           pipelines:
             traces:
               exporters:
