Actually e2e test java

--- a/tests/e2e-instrumentation/instrumentation-java-multicontainer/00-install-collector.yaml
+++ b/tests/e2e-instrumentation/instrumentation-java-multicontainer/00-install-collector.yaml
@@ -20,3 +20,6 @@ spec:
         traces:
           receivers: [otlp]
           exporters: [debug]
+        metrics:
+          receivers: [otlp]
+          exporters: [debug]
