--- a/tests/e2e-instrumentation/instrumentation-java-other-ns/02-install-collector.yaml
+++ b/tests/e2e-instrumentation/instrumentation-java-other-ns/02-install-collector.yaml
@@ -19,4 +19,7 @@ spec:
         traces:
           receivers: [otlp]
           exporters: [debug]
+        metrics:
+          receivers: [otlp]
+          exporters: [debug]
   mode: sidecar
