--- a/tests/e2e-instrumentation/instrumentation-java-tls/00-install-collector.yaml
+++ b/tests/e2e-instrumentation/instrumentation-java-tls/00-install-collector.yaml
@@ -41,3 +41,6 @@ spec:
         traces:
           receivers: [otlp]
           exporters: [debug]
+        metrics:
+          receivers: [otlp]
+          exporters: [debug]
