--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -1,3 +1,8 @@
 resources:
 - manager.yaml
-
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+images:
+- name: controller
+  newName: jaronoff/opentelemetry-operator
+  newTag: op-v179
