--- a/.chloggen/2947-updating-ds-sf-depl-mutation.yaml
+++ b/.chloggen/2947-updating-ds-sf-depl-mutation.yaml
@@ -1,11 +1,11 @@
 # One of 'breaking', 'deprecation', 'new_component', 'enhancement', 'bug_fix'
-change_type: enhancement
+change_type: bug_fix
 
 # The name of the component, or a single word describing the area of concern, (e.g. collector, target allocator, auto-instrumentation, opamp, github action)
 component: collector
 
 # A brief description of the change. Surround your text with quotes ("") if it needs to start with a backtick (`).
-note: "Improve mutation of deployments, statefulsets, and daemonsets allowing to remove fields on update"
+note: "Fix mutation of deployments, statefulsets, and daemonsets allowing to remove fields on update"
 
 # One or more tracking issues related to the change
 issues: [2947]
