Updating spec mutation logic of daemonset, statefulset, and deployment with mergeWithOverwriteWithEmptyValue (#3324)
* e2e tests for additionalContainers added

* additionalContainers related unit tests added for mutation

* Changed apiversion to v1beta1 in nodeselector e2e test

* removed explicit zero value for additionalContainers and changed apply to update in chainsaw test

* added affinity in collector e2e tests

* affinity unit tests added for daemonset, deployment, statefulset during mutation

* collector container mutate args e2e tests added

* Unit tests added for additional args mutation of collector container

* e2e tests for changing labels in collectors

* e2e tests for changing annotations in collectors

* fix annotation change e2e test asserts

* Error and label change related unit tests added for resource mutation

* fix label change e2e tests for mutation

* mutating the spec and labels of deployment, daemonset, statefulset with mergeWithOverwriteWithEmptyValue

* Adjust reconcile tests to new mutation logic

* Added chlog entry for new mutation logic

* fix typo in mutate_test.go

* Fix G601: Implicit memory aliasing in mutate_test.go

* Revert "Adjust reconcile tests to new mutation logic"

This reverts commit 9060661d6b82011f77cfa0cebd5a8580bfaa9111.

* label and annotation changes with mergeWithOverride; adjust tests

* copy over desired.spec.template.spec to existing.spec.template.spec

* volumeClaimTemplates mutation through range

* Change type to bugfix

* Fix volume-claim-label e2e test

---------

Co-authored-by: Israel Blancas <iblancas@redhat.com>

--- a/tests/e2e/additional-containers-collector/02-modify-collectors-additional-containers.yaml
+++ b/tests/e2e/additional-containers-collector/02-modify-collectors-additional-containers.yaml
@@ -3,16 +3,17 @@ kind: OpenTelemetryCollector
 metadata:
   name: deployment
   labels:
-    node-selector-mode: without
+    additional-containers: with
 spec:
   mode: deployment
-  nodeSelector:
+  additionalContainers:
+  - image: alpine
+    name: alpine3
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
@@ -30,16 +31,17 @@ kind: OpenTelemetryCollector
 metadata:
   name: daemonset
   labels:
-    node-selector-mode: without
+    additional-containers: with
 spec:
   mode: daemonset
-  nodeSelector:
+  additionalContainers:
+  - image: alpine
+    name: alpine3
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
@@ -57,16 +59,17 @@ kind: OpenTelemetryCollector
 metadata:
   name: statefulset
   labels:
-    node-selector-mode: without
+    additional-containers: with
 spec:
   mode: statefulset
-  nodeSelector:
+  additionalContainers:
+  - image: alpine
+    name: alpine3
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
