--- a/tests/e2e/annotation-change-collector/00-install-collectors-with-extra-annotation.yaml
+++ b/tests/e2e/annotation-change-collector/00-install-collectors-with-extra-annotation.yaml
@@ -2,17 +2,15 @@ apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
   name: deployment
-  labels:
-    node-selector-mode: without
+  annotations:
+    user-annotation: "existing"
 spec:
   mode: deployment
-  nodeSelector:
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
@@ -29,17 +27,15 @@ apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
   name: daemonset
-  labels:
-    node-selector-mode: without
+  annotations:
+    user-annotation: "existing"
 spec:
   mode: daemonset
-  nodeSelector:
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
@@ -56,17 +52,15 @@ apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
   name: statefulset
-  labels:
-    node-selector-mode: without
+  annotations:
+    user-annotation: "existing"
 spec:
   mode: statefulset
-  nodeSelector:
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
