--- a/tests/e2e/annotation-change-collector/01-install-collectors-with-annotation-change.yaml
+++ b/tests/e2e/annotation-change-collector/01-install-collectors-with-annotation-change.yaml
@@ -2,17 +2,16 @@ apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
   name: deployment
-  labels:
-    node-selector-mode: without
+  annotations:
+    user-annotation: "modified"
+    new-annotation: "yes"
 spec:
   mode: deployment
-  nodeSelector:
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
@@ -29,17 +28,16 @@ apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
   name: daemonset
-  labels:
-    node-selector-mode: without
+  annotations:
+    user-annotation: "modified"
+    new-annotation: "yes"
 spec:
   mode: daemonset
-  nodeSelector:
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
@@ -56,17 +54,16 @@ apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
   name: statefulset
-  labels:
-    node-selector-mode: without
+  annotations:
+    user-annotation: "modified"
+    new-annotation: "yes"
 spec:
   mode: statefulset
-  nodeSelector:
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
