--- a/tests/e2e/label-change-collector/00-install-collectors-with-extra-label.yaml
+++ b/tests/e2e/label-change-collector/00-install-collectors-with-extra-label.yaml
@@ -3,16 +3,14 @@ kind: OpenTelemetryCollector
 metadata:
   name: deployment
   labels:
-    node-selector-mode: without
+    user-label: "existing"
 spec:
   mode: deployment
-  nodeSelector:
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
@@ -30,16 +28,14 @@ kind: OpenTelemetryCollector
 metadata:
   name: daemonset
   labels:
-    node-selector-mode: without
+    user-label: "existing"
 spec:
   mode: daemonset
-  nodeSelector:
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
@@ -57,16 +53,14 @@ kind: OpenTelemetryCollector
 metadata:
   name: statefulset
   labels:
-    node-selector-mode: without
+    user-label: "existing"
 spec:
   mode: statefulset
-  nodeSelector:
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
