--- a/tests/e2e/additional-containers-collector/01-install-collectors-with-additional-containers.yaml
+++ b/tests/e2e/additional-containers-collector/01-install-collectors-with-additional-containers.yaml
@@ -3,16 +3,19 @@ kind: OpenTelemetryCollector
 metadata:
   name: deployment
   labels:
-    node-selector-mode: without
+    additional-containers: with
 spec:
   mode: deployment
-  nodeSelector:
+  additionalContainers:
+  - image: alpine
+    name: alpine
+  - image: alpine
+    name: alpine2
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
@@ -30,16 +33,19 @@ kind: OpenTelemetryCollector
 metadata:
   name: daemonset
   labels:
-    node-selector-mode: without
+    additional-containers: with
 spec:
   mode: daemonset
-  nodeSelector:
+  additionalContainers:
+  - image: alpine
+    name: alpine
+  - image: alpine
+    name: alpine2
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
@@ -57,16 +63,19 @@ kind: OpenTelemetryCollector
 metadata:
   name: statefulset
   labels:
-    node-selector-mode: without
+    additional-containers: with
 spec:
   mode: statefulset
-  nodeSelector:
+  additionalContainers:
+  - image: alpine
+    name: alpine
+  - image: alpine
+    name: alpine2
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
