--- a/tests/e2e/args-collector/02-modify-collectors-args.yaml
+++ b/tests/e2e/args-collector/02-modify-collectors-args.yaml
@@ -3,16 +3,16 @@ kind: OpenTelemetryCollector
 metadata:
   name: deployment
   labels:
-    node-selector-mode: without
+    args: with
 spec:
   mode: deployment
-  nodeSelector:
+  args:
+    different-extra-arg: "yes"
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
@@ -30,16 +30,16 @@ kind: OpenTelemetryCollector
 metadata:
   name: daemonset
   labels:
-    node-selector-mode: without
+    args: with
 spec:
   mode: daemonset
-  nodeSelector:
+  args:
+    different-extra-arg: "yes"
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
@@ -57,16 +57,16 @@ kind: OpenTelemetryCollector
 metadata:
   name: statefulset
   labels:
-    node-selector-mode: without
+    args: with
 spec:
   mode: statefulset
-  nodeSelector:
+  args:
+    different-extra-arg: "yes"
   config:
     receivers:
       otlp:
         protocols:
           grpc: {}
-          http: {}
     processors: {}
 
     exporters:
