Assert specific command in musl e2e instrumentation test

--- a/tests/e2e-instrumentation/instrumentation-python-musl/01-assert.yaml
+++ b/tests/e2e-instrumentation/instrumentation-python-musl/01-assert.yaml
@@ -66,6 +66,11 @@ spec:
     name: otc-container
   initContainers:
   - name: opentelemetry-auto-instrumentation-python
+    command:
+      - cp
+      - -r
+      - /autoinstrumentation-musl/.
+      - /otel-auto-instrumentation-python
 status:
   containerStatuses:
   - name: myapp
