--- a/tests/e2e-automatic-rbac/receiver-k8sobjects/01-install.yaml
+++ b/tests/e2e-automatic-rbac/receiver-k8sobjects/01-install.yaml
@@ -1,10 +1,10 @@
-apiVersion: opentelemetry.io/v1alpha1
+apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
   name: simplest
   namespace: chainsaw-k8sobjects
 spec:
-  config: |
+  config:
     receivers:
       k8sobjects:
         auth_type: serviceAccount
