--- a/.chloggen/bump-base-instrumentation-mem-limit.yaml
+++ b/.chloggen/bump-base-instrumentation-mem-limit.yaml
@@ -8,7 +8,7 @@ component: auto-instrumentation
 note: Bump base memory requirements for python and go
 
 # One or more tracking issues related to the change
-issues: []
+issues: [3479]
 
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
