e2e test prometheus operator scrape config and probes
Signed-off-by: qiyang <dominic.qiyang@gmail.com>

--- a/tests/e2e-targetallocator/targetallocator-prometheuscr/02-install.yaml
+++ b/tests/e2e-targetallocator/targetallocator-prometheuscr/02-install.yaml
@@ -28,6 +28,7 @@ spec:
       enabled: true
       scrapeInterval: 1s
       scrapeConfigSelector: {}
+      probeSelector: {}
     serviceAccount: ta
 ---
 apiVersion: monitoring.coreos.com/v1alpha1
