e2e test prometheus operator scrape config and probes
Signed-off-by: qiyang <dominic.qiyang@gmail.com>

--- a/tests/e2e-targetallocator/targetallocator-prometheuscr/02-assert.yaml
+++ b/tests/e2e-targetallocator/targetallocator-prometheuscr/02-assert.yaml
@@ -20,7 +20,7 @@ data:
   targetallocator.yaml:
     ( contains(@, join(':', ['service_monitor_selector', ' null'])) ): true
     ( contains(@, join(':', ['pod_monitor_selector', ' null'])) ): true
-    ( contains(@, join(':', ['probe_selector', ' null'])) ): true
+    ( contains(@, join(':', ['probe_selector', ' null'])) ): false
     ( contains(@, join(':', ['scrape_config_selector', ' null'])) ): false
     ( contains(@, join(':', ['matchlabels', ' {}}'])) ): false
     ( contains(@, join(':', ['matchexpressions', ' {}}'])) ): false
